# skoolVidScraper

./: .gitignore  CLAUDE.md  LICENSE  README.md  TEST_PLAN.md  config.example.json  cookie_loader.py  downloader.py  extractor.py  main.py  pyproject.toml  requirements.txt  screenshots.py  server.py  transcribe.py
extension/: manifest.json  popup.html  popup.js
skoolvidscraper/: __init__.py  cli.py  content.py  discoverer.py  downloader.py  extractor.py  ffmpeg_setup.py  logger.py  main.py  page_fetcher.py  server.py  transcribe.py  transcriber.py  tray.py
